--- a/src/main/resources/templates/list.html
+++ b/src/main/resources/templates/list.html
@@ -1,20 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 
-<head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link th:href="@{design/css/bootstrap.min.css}" rel="stylesheet" />
-    <link th:href="@{design/css/font-awesome.min.css}" rel="stylesheet" />
-    <link th:href="@{design/css/custom/main.css}" rel="stylesheet" />
-    <script th:src="@{design/js/jquery-3.2.1.min.js}"></script>
-    <script th:src="@{design/js/jquery.serializejson.js}"></script>
-    <script th:src="@{design/js/num.incre.js}"></script>
-    <script th:src="@{design/js/bootstrap.min.js}"></script>
-    <script th:src="@{design/js/custom/main.js}"></script>
-    <title>明细</title>
-</head>
+<head th:replace="fragments/base/head :: head (pageTitle='明细')"></head>
 
 <body>
     <div class="site-wrapper">
