Fix num animation minus number issue

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,18 +7,7 @@
     <div class="site-wrapper">
         <div class="site-wrapper-inner">
             <div class="cover-container">
-                <div class="masthead clearfix">
-                    <div class="inner">
-                        <h3 class="masthead-brand">Cover</h3>
-                        <nav>
-                            <ul class="nav masthead-nav">
-                                <li class="active"><a href="#">Home</a></li>
-                                <li><a href="#">Features</a></li>
-                                <li><a href="#">Contact</a></li>
-                            </ul>
-                        </nav>
-                    </div>
-                </div>
+                <div th:replace="fragments/base/header :: header"></div>
                 <div class="inner cover">
                     <h1 class="cover-heading">Your expense:</h1>
                     <p class="lead count" th:text="${allExpense}"></p>
@@ -27,11 +16,7 @@
                     </a>
                     </p>
                 </div>
-                <div class="mastfoot">
-                    <div class="inner">
-                        <p>Cover template for <a href="http://getbootstrap.com">Bootstrap</a>, by <a href="https://twitter.com/mdo">@mdo</a>.</p>
-                    </div>
-                </div>
+                <div th:replace="fragments/base/footer :: footer"></div>
             </div>
         </div>
     </div>
