--- a/src/main/resources/templates/list.html
+++ b/src/main/resources/templates/list.html
@@ -7,28 +7,13 @@
     <div class="site-wrapper">
         <div class="site-wrapper-inner">
             <div class="cover-container">
-                <div class="masthead clearfix">
-                    <div class="inner">
-                        <h3 class="masthead-brand">Cover</h3>
-                        <nav>
-                            <ul class="nav masthead-nav">
-                                <li class="active"><a href="#">Home</a></li>
-                                <li><a href="#">Features</a></li>
-                                <li><a href="#">Contact</a></li>
-                            </ul>
-                        </nav>
-                    </div>
-                </div>
+                <div th:replace="fragments/base/header :: header"></div>
                 <div class="inner cover">
                     <ul class="list-group" th:each="entry,entryStat : ${allEntries}">
                         <li class="list-group-item" th:text="${entry.category.name} + ${entry.amount}"></li>
                     </ul>
                 </div>
-                <div class="mastfoot">
-                    <div class="inner">
-                        <p>Cover template for <a href="http://getbootstrap.com">Bootstrap</a>, by <a href="https://twitter.com/mdo">@mdo</a>.</p>
-                    </div>
-                </div>
+                <div th:replace="fragments/base/footer :: footer"></div>
             </div>
         </div>
     </div>
