--- a/src/main/resources/static/design/css/custom/main.css
+++ b/src/main/resources/static/design/css/custom/main.css
@@ -149,3 +149,24 @@ body {
     width: 700px;
   }
 }
+
+.btn-matrix > .btn:nth-child(3n+4) {
+  clear: left;
+  margin-left: 0;
+}
+.btn-matrix > .btn:nth-child(n+4) {
+  margin-top: -1px;
+}
+.btn-matrix > .btn {
+  margin-bottom: 5px;
+  margin-right: 5px;
+  width: 120px;
+}
+.btn-matrix > .btn > i {
+  margin-right: 5px;
+}
+
+/* Decorations */
+.btn-matrix {
+  margin: 20px;
+}
