--- a/src/main/resources/templates/fragments/base/head.html
+++ b/src/main/resources/templates/fragments/base/head.html
@@ -6,11 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link th:href="@{design/css/bootstrap.min.css}" rel="stylesheet" />
     <link th:href="@{design/css/font-awesome.min.css}" rel="stylesheet" />
+    <link th:href="@{design/css/fontIconPicker/jquery.fonticonpicker.min.css}" rel="stylesheet" />
+    <link th:href="@{design/css/fontIconPicker/jquery.fonticonpicker.grey.min.css}" rel="stylesheet" />
+    <link th:href="@{design/css/fontIconPicker/jquery.fonticonpicker.bootstrap.min.css}" rel="stylesheet" />
+    <link th:href="@{design/css/fontIconPicker/fontello/css/fontello.css}" rel="stylesheet" />
     <link th:href="@{design/css/custom/main.css}" rel="stylesheet" />
     <script th:src="@{design/js/jquery-3.2.1.min.js}"></script>
     <script th:src="@{design/js/jquery.serializejson.js}"></script>
     <script th:src="@{design/js/num.incre.js}"></script>
     <script th:src="@{design/js/bootstrap.min.js}"></script>
+    <script th:src="@{design/js/jquery.fonticonpicker.min.js}"></script>
     <script th:src="@{design/js/custom/main.js}"></script>
 
     <script type="text/javascript"
