--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -46,7 +46,7 @@
                                     </div>
                                     <div class="form-group">
                                         <div class="btn-group category-group btn-matrix" role="group" aria-label="category" data-toggle="buttons"></div>
-                                        <button type="button" class="btn btn-default" data-oper="addCat" data-toggle="modal" data-target="#category-overlay">+</button>
+                                        <button type="button" class="btn btn-default btn-block" data-oper="addCat" data-toggle="modal" data-target="#category-overlay">+</button>
                                     </div>
                                     <div class="form-group date">
                                         <label for="date" class="control-label">日期</label>
