--- a/src/main/resources/static/design/css/custom/main.css
+++ b/src/main/resources/static/design/css/custom/main.css
@@ -1,11 +1,14 @@
 /*
  * Globals
  */
+
 * {
   -webkit-border-radius: 0 !important;
   -moz-border-radius: 0 !important;
   border-radius: 0 !important;
 }
+
+
 /*
  * Base structure
  */
@@ -15,69 +18,84 @@ body {
   height: 100%;
   background-color: #333;
 }
+
 body {
   text-align: center;
 }
 
+
 /* Extra markup and styles for table-esque vertical and horizontal centering */
+
 .site-wrapper {
   background: #ffffff url("../../img/bg.jpeg") no-repeat;
   background-size: cover;
   display: table;
   width: 100%;
-  height: 100%; /* For at least Firefox */
+  height: 100%;
+  /* For at least Firefox */
   min-height: 100%;
   -webkit-box-shadow: inset 0 0 100px rgba(0, 0, 0, 0.5);
   box-shadow: inset 0 0 100px rgba(0, 0, 0, 0.5);
 }
+
 .site-wrapper-inner {
   display: table-cell;
   vertical-align: top;
 }
+
 .cover-container {
   margin-right: auto;
   margin-left: auto;
 }
 
+
 /* Padding for spacing */
+
 .inner {
   color: #fff;
   padding: 30px;
   text-shadow: 0 1px 3px rgba(0, 0, 0, 0.5);
 }
 
+
 /*
  * Header
  */
+
 .masthead-brand {
   margin-top: 10px;
   margin-bottom: 10px;
 }
 
-.masthead-nav > li {
+.masthead-nav>li {
   display: inline-block;
 }
-.masthead-nav > li + li {
+
+.masthead-nav>li+li {
   margin-left: 20px;
 }
-.masthead-nav > li > a {
+
+.masthead-nav>li>a {
   padding-right: 0;
   padding-left: 0;
   font-size: 16px;
   font-weight: bold;
-  color: #fff; /* IE8 proofing */
+  color: #fff;
+  /* IE8 proofing */
   color: rgba(255, 255, 255, 0.75);
   border-bottom: 2px solid transparent;
 }
-.masthead-nav > li > a:hover,
-.masthead-nav > li > a:focus {
+
+.masthead-nav>li>a:hover,
+.masthead-nav>li>a:focus {
   background-color: transparent;
   border-bottom-color: #a9a9a9;
   border-bottom-color: rgba(255, 255, 255, 0.25);
 }
-.masthead-nav > .active > a,
-.masthead-nav > .active > a:hover,
-.masthead-nav > .active > a:focus {
+
+.masthead-nav>.active>a,
+.masthead-nav>.active>a:hover,
+.masthead-nav>.active>a:focus {
   color: #fff;
   border-bottom-color: #fff;
 }
@@ -91,6 +109,7 @@ body {
   }
 }
 
+
 /*
  * Cover
  */
@@ -98,19 +117,23 @@ body {
 .cover {
   padding: 0 20px;
 }
+
 .cover .btn-lg {
   padding: 10px 20px;
   font-weight: bold;
 }
+
 
 /*
  * Footer
  */
 
 .mastfoot {
-  color: #999; /* IE8 proofing */
+  color: #999;
+  /* IE8 proofing */
   color: rgba(255, 255, 255, 0.5);
 }
+
 
 /*
  * Affix and center
@@ -134,7 +157,8 @@ body {
   .masthead,
   .mastfoot,
   .cover-container {
-    width: 100%; /* Must be percentage or pixels for horizontal alignment */
+    width: 100%;
+    /* Must be percentage or pixels for horizontal alignment */
   }
 }
 
@@ -152,28 +176,19 @@ body {
   width: 100%;
   display: block;
 }
-.btn-matrix > .btn {
+
+.btn-matrix>.btn {
   margin-right: 3.45%;
   margin-bottom: 3px;
   width: 30%;
   min-width: 115px;
 }
-.btn-group.btn-matrix > .btn:first-child {
+
+.btn-group.btn-matrix>.btn:first-child {
   margin-left: -1px;
 }
 
-/* .btn-matrix > .btn:nth-child(3n+4) {
-  clear: left;
-  margin-left: 0;
+.bootstrap-tagsinput {
+  width: 100%;
+  text-align: left;
 }
-.btn-matrix > .btn:nth-child(n+4) {
-  margin-top: -1px;
-}
-.btn-matrix > .btn {
-  margin-bottom: 5px;
-  margin-right: 5px;
-  width: 120px;
-}
-.btn-matrix > .btn > i {
-  margin-right: 5px;
-} */
