--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -53,9 +53,11 @@
                                         <input type="text" class="form-control" id="date" name="date" />
                                         <span class="input-group-addon"><i class="glyphicon glyphicon-th"></i></span>
                                     </div>
-                                    <div class="form-group">
+                                    <div class="form-label">
                                         <label for="comment" class="control-label">备注</label>
-                                        <textarea class="form-control" rows="3" id="comment" name="comment" />
+                                    </div>
+                                    <div class="form-group">
+                                        <input type="text" class="form-control" id="comment" name="comment" value="Amsterdam,Sydney,Beijing,Cairo" data-role="tagsinput" />
                                     </div>
                                     <input type="hidden" id="type" name="type" value="0" />
                                     <button type="submit" class="btn btn-success addEntryBtn">确定</button>
