Add match amount and category, auto fill tag

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -57,7 +57,7 @@
                                         <label for="comment" class="control-label">备注</label>
                                     </div>
                                     <div class="form-group">
-                                        <input type="text" class="form-control" id="comment" name="comment" data-role="tagsinput" />
+                                        <input type="text" class="form-control" id="comment" name="comment" />
                                     </div>
                                     <input type="hidden" id="type" name="type" value="0" />
                                     <button type="submit" class="btn btn-success addEntryBtn">确定</button>
