--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -59,8 +59,7 @@
                                     <div class="form-group">
                                         <input type="text" class="form-control" id="comment" name="comment" />
                                     </div>
-                                    <input type="hidden" id="type" name="type" value="0" />
-                                    <button type="submit" class="btn btn-success addEntryBtn">确定</button>
+                                    <button type="submit" class="btn btn-success addEntryBtn" data-dismiss="modal">确定</button>
                                 </form>
                             </div>
                         </div>
@@ -70,7 +69,7 @@
         </div>
     </div>
     <div id="category-overlay" class="modal fade" role="dialog">
-        <div class="modal-dialog">
+        <div class="modal-dialog modal-sm">
             <div class="modal-content">
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">×</span><span class="sr-only">Close</span></button>
@@ -95,7 +94,7 @@
                                             <label class="btn btn-default"><input type="radio" id="catType" name="type" value="1" />收入</label>
                                         </div>
                                     </div>
-                                    <button type="submit" class="btn btn-success btn-block addCatBtn">确定</button>
+                                    <button type="submit" class="btn btn-success btn-block addCatBtn" data-dismiss="modal">确定</button>
                                 </form>
                             </div>
                         </div>
