improve list page style and display info

--- a/src/main/resources/templates/list.html
+++ b/src/main/resources/templates/list.html
@@ -12,11 +12,15 @@
                     <ul class="list-group">
                         <li th:each="entry,entryStat : ${allEntries}" class="list-group-item" 
                             th:classappend="${entry.category.type == 0} ? 'list-group-item-warning' : 'list-group-item-success'">
-                            <h4 class="list-group-item-heading" th:text="'￥' + ${entry.amount}">List Group Item Heading</h4>
-                            <p class="list-group-item-text">
+                            <h4 class="list-group-item-heading" 
+                                th:text="${entry.category.type == 0} ? '-￥' + ${entry.amount} : '+￥' + ${entry.amount} "></h4>
+                            <div class="list-group-item-text">
                                 <i th:class="${entry.category.icon}"></i>
-                                <span th:text="${entry.category.name}" th:remove="tag">title</span>
-                            </p>
+                                <h4>
+                                    <span th:text="${entry.category.name}"></span>
+                                    <div th:text="${entry.comment}" class="label label-info"></div>
+                                </h4>                              
+                            </div>
                         </li>
                     </ul>
                 </div>
