--- a/src/main/resources/static/design/css/custom/main.css
+++ b/src/main/resources/static/design/css/custom/main.css
@@ -8,7 +8,6 @@
   border-radius: 0 !important;
 }
 
-
 /*
  * Base structure
  */
@@ -22,7 +21,6 @@ body {
 body {
   text-align: center;
 }
-
 
 /* Extra markup and styles for table-esque vertical and horizontal centering */
 
@@ -48,7 +46,6 @@ body {
   margin-left: auto;
 }
 
-
 /* Padding for spacing */
 
 .inner {
@@ -56,7 +53,6 @@ body {
   padding: 30px;
   text-shadow: 0 1px 3px rgba(0, 0, 0, 0.5);
 }
-
 
 /*
  * Header
@@ -67,15 +63,15 @@ body {
   margin-bottom: 10px;
 }
 
-.masthead-nav>li {
+.masthead-nav > li {
   display: inline-block;
 }
 
-.masthead-nav>li+li {
+.masthead-nav > li + li {
   margin-left: 20px;
 }
 
-.masthead-nav>li>a {
+.masthead-nav > li > a {
   padding-right: 0;
   padding-left: 0;
   font-size: 16px;
@@ -86,16 +82,16 @@ body {
   border-bottom: 2px solid transparent;
 }
 
-.masthead-nav>li>a:hover,
-.masthead-nav>li>a:focus {
+.masthead-nav > li > a:hover,
+.masthead-nav > li > a:focus {
   background-color: transparent;
   border-bottom-color: #a9a9a9;
   border-bottom-color: rgba(255, 255, 255, 0.25);
 }
 
-.masthead-nav>.active>a,
-.masthead-nav>.active>a:hover,
-.masthead-nav>.active>a:focus {
+.masthead-nav > .active > a,
+.masthead-nav > .active > a:hover,
+.masthead-nav > .active > a:focus {
   color: #fff;
   border-bottom-color: #fff;
 }
@@ -108,7 +104,6 @@ body {
     float: right;
   }
 }
-
 
 /*
  * Cover
@@ -123,7 +118,6 @@ body {
   font-weight: bold;
 }
 
-
 /*
  * Footer
  */
@@ -133,7 +127,6 @@ body {
   /* IE8 proofing */
   color: rgba(255, 255, 255, 0.5);
 }
-
 
 /*
  * Affix and center
@@ -177,14 +170,14 @@ body {
   display: block;
 }
 
-.btn-matrix>.btn {
+.btn-matrix > .btn {
   margin-right: 3.45%;
   margin-bottom: 3px;
   width: 30%;
   min-width: 115px;
 }
 
-.btn-group.btn-matrix>.btn:first-child {
+.btn-group.btn-matrix > .btn:first-child {
   margin-left: -1px;
 }
 
@@ -202,7 +195,20 @@ body {
   margin: 15px 5px;
 }
 
-.entryList .list-group-item .list-group-item-heading {
+.entryList .list-group-item-heading {
   text-align: right;
   font-weight: bold;
+}
+
+.entryList .list-group-item-text h4 span {
+  float: left;
+  font-weight: bold;
+}
+
+.entryList .list-group-item-text h4 .label {
+  margin-left: 12px;
+}
+
+.entryList .list-group-item-text i {
+  float: left;
 }
