--- a/src/main/resources/static/design/css/fontIconPicker/fontello/css/fontello.css
+++ b/src/main/resources/static/design/css/fontIconPicker/fontello/css/fontello.css
@@ -44,8 +44,8 @@
   /* remove if not needed */
   margin-left: .2em;
  
-  /* you can be more comfortable with increased icons size */
-  /* font-size: 120%; */
+ 
+  font-size: 120%;
  
   /* Font smoothing. That was taken from TWBS */
   -webkit-font-smoothing: antialiased;
